<resources>
    <string name="app_name">FrutiApp</string>
    <string name="como_te_llamas">¿Comó te llamas?</string>
    <string name="jugar">JUGAR</string>
    <string name="jugador">Jugador</string>
    <string name="Score">Score: 0</string>
    <string name="Manzanas">Manzanas</string>
    <string name="Comprobar">Comprobar</string>
    <string name="Valor">Valor</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="Ver_score">Ver Score</string>
    <string name="Salir">Salir</string>
    <string name="Todos_score">Todos los score</string>
</resources>