<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="281dp"
        android:layout_height="265dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        app:srcCompat="@drawable/manzana" />

    <EditText
        android:id="@+id/editText_nombre"
        android:layout_width="311dp"
        android:layout_height="47dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/como_te_llamas"
        android:inputType="textPersonName"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="296dp"
        android:layout_height="53dp"
        android:layout_below="@+id/editText_nombre"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:background="@drawable/fondoboton"
        android:onClick="Jugar"
        android:text="@string/jugar"
        android:textColor="@color/design_default_color_error"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_below="@+id/button"
        android:layout_marginTop="17dp"
        android:background="@drawable/fondoet"
        android:gravity="center"
        android:text="@string/Bienvenido"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ver_score"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_below="@+id/textView_score"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:onClick="Ver_score"
        android:text="@string/Ver_score"
        app:backgroundTint="#994CAF50" />

    <Button
        android:id="@+id/ver_score2"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_below="@+id/textView_score"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:onClick="Salir"
        android:text="@string/Salir"
        app:backgroundTint="#994CAF50" />

</RelativeLayout>